// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-position match input "START
hello
END" with regexp "/START\\n(hello)\\nEND/g" 1`] = `
Array [
  Object {
    "endPos": 5,
    "endPosInBlob": 11,
    "lineNumber": 2,
    "startPos": 0,
    "startPosInBlob": 6,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo
START
hello
END" with regexp "/START\\n(hello)\\nEND/g" 1`] = `
Array [
  Object {
    "endPos": 5,
    "endPosInBlob": 15,
    "lineNumber": 3,
    "startPos": 0,
    "startPosInBlob": 10,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo
START
hello
END" with regexp "/START\\n(hello)\\nEND/g" 2`] = `
Array [
  Object {
    "endPos": 5,
    "endPosInBlob": 15,
    "lineNumber": 3,
    "startPos": 0,
    "startPosInBlob": 10,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo
hello "hello" bar" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 13,
    "endPosInBlob": 17,
    "lineNumber": 2,
    "startPos": 6,
    "startPosInBlob": 10,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo
hello bar" with regexp "/(hello)/g" 1`] = `
Array [
  Object {
    "endPos": 5,
    "endPosInBlob": 9,
    "lineNumber": 2,
    "startPos": 0,
    "startPosInBlob": 4,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo hello "hello" bar" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 17,
    "endPosInBlob": 17,
    "lineNumber": 1,
    "startPos": 10,
    "startPosInBlob": 10,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo hello "hello"" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 17,
    "endPosInBlob": 17,
    "lineNumber": 1,
    "startPos": 10,
    "startPosInBlob": 10,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo hello bar" with regexp "/(hello)/g" 1`] = `
Array [
  Object {
    "endPos": 9,
    "endPosInBlob": 9,
    "lineNumber": 1,
    "startPos": 4,
    "startPosInBlob": 4,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo hello" with regexp "/(hello)/g" 1`] = `
Array [
  Object {
    "endPos": 9,
    "endPosInBlob": 9,
    "lineNumber": 1,
    "startPos": 4,
    "startPosInBlob": 4,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "hello "hello"" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 13,
    "endPosInBlob": 13,
    "lineNumber": 1,
    "startPos": 6,
    "startPosInBlob": 6,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "hello 'hello'" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 13,
    "endPosInBlob": 13,
    "lineNumber": 1,
    "startPos": 6,
    "startPosInBlob": 6,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "hello" with regexp "/(hello)/g" 1`] = `
Array [
  Object {
    "endPos": 5,
    "endPosInBlob": 5,
    "lineNumber": 1,
    "startPos": 0,
    "startPosInBlob": 0,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position returns an empty array when capture group is empty 1`] = `
Array [
  Object {
    "endPos": 3,
    "endPosInBlob": 3,
    "lineNumber": 1,
    "startPos": 0,
    "startPosInBlob": 0,
    "values": Array [
      "foo",
      "bar",
    ],
  },
]
`;
